--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.2.0"
+    "handlebars": "^4.7.8",
+    "vite": "^5.2.0",
+    "vite-plugin-handlebars": "^2.0.0"
   }
 }
