--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "handlebars": "^4.7.8",
     "postcss-cli": "^11.0.0",
+    "sass": "^1.77.5",
     "vite": "^5.2.0",
     "vite-plugin-handlebars": "^2.0.0"
   },
