--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "type": "module",
   "scripts": {
     "start": "vite",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "engines": {
+    "node": ">= 12.0.0"
   },
   "devDependencies": {
     "handlebars": "^4.7.8",
@@ -16,6 +20,7 @@
     "vite-plugin-handlebars": "^2.0.0"
   },
   "dependencies": {
+    "express": "^4.19.2",
     "postcss": "^8.4.38",
     "postcss-import": "^16.1.0",
     "postcss-normalize": "^10.0.1",
