--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "node": ">= 12.0.0"
   },
   "devDependencies": {
+    "@types/node": "^20.14.8",
+    "@vitejs/plugin-vue": "^5.0.5",
     "handlebars": "^4.7.8",
     "postcss-cli": "^11.0.0",
     "sass": "^1.77.5",
-    "vite": "^5.2.0",
+    "typescript": "^5.5.2",
+    "vite": "^5.3.1",
+    "vite-plugin-checker": "^0.6.4",
     "vite-plugin-handlebars": "^2.0.0"
   },
   "dependencies": {
