--- a/package.json
+++ b/package.json
@@ -7,20 +7,37 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .ts --ext .js"
   },
   "engines": {
     "node": ">= 12.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.8",
+    "@typescript-eslint/eslint-plugin": "6.18.0",
+    "@typescript-eslint/parser": "6.18.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-prettier": "5.1.2",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-simple-import-sort": "10.0.0",
+    "eslint-plugin-unicorn": "50.0.1",
+    "globals": "^15.6.0",
     "handlebars": "^4.7.8",
     "postcss-cli": "^11.0.0",
+    "prettier": "^3.3.2",
     "sass": "^1.77.5",
     "typescript": "^5.5.2",
     "vite": "^5.3.1",
     "vite-plugin-checker": "^0.6.4",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-handlebars": "^2.0.0"
   },
   "dependencies": {
