--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .ts --ext .js"
+    "lint": "eslint . --ext .ts --ext .js",
+    "lint:css": "stylelint '**/*.css'",
+    "lint:css:fix": "stylelint '**/*.css' --fix"
   },
   "engines": {
     "node": ">= 12.0.0"
@@ -34,6 +36,10 @@
     "postcss-cli": "^11.0.0",
     "prettier": "^3.3.2",
     "sass": "^1.77.5",
+    "stylelint": "^16.6.1",
+    "stylelint-config-recommended": "^14.0.1",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-scss": "^6.3.2",
     "typescript": "^5.5.2",
     "vite": "^5.3.1",
     "vite-plugin-checker": "^0.6.4",
