--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,18 +4,13 @@
     "es2021": true
   },
   "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
+    "stylelint-config-standard"
   ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
+  "rules": {
+    "import-notation": null,
+    "selector-class-pattern": null,
   },
   "plugins": [
     "@typescript-eslint"
-  ],
-  "rules": {
-    "import-notation": null
-  }
+  ]
 }
