--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
   ],
   "rules": {
     "import-notation": null,
-    "selector-class-pattern": null,
+    "selector-class-pattern": null
   },
   "plugins": [
     "@typescript-eslint"
