Исправляю ошибки, в процессе, подождите пожалуйста

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,7 @@
     "@typescript-eslint"
   ],
   "rules": {
-    "import-notation": 1, //0 для отключения, 1 для предупреждений и 2 для ошибок
+    "import-notation": 1, //0 для отключения, 1 для предупреждений, 2 для ошибок
     "selector-class-pattern": 1
   }
 }
