--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,9 @@
 {
   "extends": "stylelint-config-standard",
   "plugins": ["stylelint-scss"],
+  "rules": {
+    "selector-class-pattern": "[a-z-_]+"
+  },
   "ignoreFiles": [
     "build/**/*",
     "dist/**/*",
