--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint-plugin-unicorn": "50.0.1",
+    "postcss-preset-env": "^9.1.2",
     "globals": "^15.6.0",
     "handlebars": "^4.7.8",
     "postcss-cli": "^11.0.0",
