--- a/package.json
+++ b/package.json
@@ -6,21 +6,29 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "vite build",
+    "build": "eslint . &&tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .ts --ext .js",
     "lint:css": "stylelint '**/*.css' '**/*.scss'",
-    "lint:css:fix": "stylelint '**/*.css' --fix"
+    "lint:css:fix": "stylelint '**/*.css' --fix",
+    "test": "mocha",
+    "check_all": "npm-run-all stylelint  eslint  test",
+    "prepare": "husky install"
   },
-  "engines": {
-    "node": ">= 14.0.0"
+  "lint-staged": {
+    "*.pcss": "npm run stylelint",
+    "*.{js,jsx,ts,tsx}": "npm run eslint"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.17",
+    "@types/mocha": "^10.0.7",
     "@types/node": "^20.14.8",
-    "@types/uuid": "^10.0.0",
+    "@types/sinon": "^17.0.3",
+    "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "6.6.0",
     "@typescript-eslint/parser": "6.6.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "chai": "^5.1.1",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
@@ -32,16 +40,21 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint-plugin-unicorn": "50.0.1",
-    "postcss-preset-env": "^9.1.2",
     "globals": "^15.6.0",
     "handlebars": "^4.7.8",
+    "husky": "^9.1.4",
+    "jsdom": "^22.1.0",
+    "lint-staged": "^15.0.2",
+    "mocha": "^10.7.0",
     "postcss-cli": "^11.0.0",
+    "postcss-preset-env": "^9.1.2",
     "prettier": "^3.3.2",
     "sass": "^1.77.5",
     "stylelint": "^16.6.1",
     "stylelint-config-recommended": "^14.0.1",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-scss": "^6.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
     "vite-plugin-checker": "^0.6.4",
@@ -56,6 +69,13 @@
     "postcss-import": "^16.1.0",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^9.5.14",
+    "sinon": "^18.0.0",
     "uuid": "^10.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm-run-all test lint:all",
+      "pre-push": "npm run other command"
+    }
   }
 }
