--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,10 @@
 
     "typeRoots": ["node_modules/@types", "models"]
   },
-  "include": ["src"]
+  "include": ["src"],
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node",
+    "transpileOnly": true
+  }
 }
