--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "eslint . &&tsc && vite build",
+    "build": "eslint . && tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .ts --ext .js",
     "lint:css": "stylelint '**/*.css' '**/*.scss'",
     "lint:css:fix": "stylelint '**/*.css' --fix",
     "test": "mocha",
-    "check_all": "npm-run-all stylelint  eslint  test",
+    "check_all": "npm-run-all stylelint eslint test",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.pcss": "npm run stylelint",
-    "*.{js,jsx,ts,tsx}": "npm run eslint"
+    "*.pcss": "npm run lint:css",
+    "*.{js,jsx,ts,tsx}": "npm run lint"
   },
   "devDependencies": {
     "@types/chai": "^4.3.17",
@@ -49,6 +49,7 @@
     "jsdom": "^22.1.0",
     "lint-staged": "^15.0.2",
     "mocha": "^10.7.0",
+    "npm-run-all": "^4.1.5",
     "postcss-cli": "^11.0.0",
     "postcss-preset-env": "^9.1.2",
     "prettier": "^3.3.2",
@@ -74,5 +75,10 @@
     "postcss-preset-env": "^9.5.14",
     "sinon": "^18.0.0",
     "uuid": "^10.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
