--- a/package.json
+++ b/package.json
@@ -56,9 +56,10 @@
     "postcss-preset-env": "^9.1.2",
     "prettier": "^3.3.2",
     "sass": "^1.77.5",
-    "stylelint": "^16.6.1",
+    "stylelint": "^16.8.1",
     "stylelint-config-recommended": "^14.0.1",
     "stylelint-config-standard": "^36.0.1",
+    "stylelint-scss": "^6.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
